# msaccess_replicator

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  project-startup.sh  pyproject.toml  requirements.txt
docs/: ms_changelog.md  ms_datatype_mapping.md  my_changelog.md  my_datatype_mapping.md  pg_changelog.md  pg_datatype_mapping.md
samples/: Test.accdb  Test.accdb-backup  Test.accdb-without-primary-key  ms_test.yaml  my_test.yaml  pg_test.yaml
src/: ms_replicator.py  my_replicator.py  pg_replicator.py  replicator.py
