[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-pg-replicator"
version = "0.1.0"
description = "Microsoft Access to PostgreSQL database replication tool"
authors = [
    {name = "Ron OHara", email = "ronohara@duck.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyodbc>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
    "dotenv>=0.9.9",
    "mmh3>=5.2.1",
    "pip>=26.1.1",
    "psycopg2>=2.9.12",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pywin32>=311",
    "PyYAML>=6.0.3",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ms-pg-replicator = "ms_pg_replicator.cli:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
